plugins {
	id 'java'
    id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
    id "org.sonarqube" version "7.0.1.6134"
	id "org.owasp.dependencycheck" version "12.1.9"
    id("org.openrewrite.rewrite") version("latest.release")
	id 'se.patrikerdes.use-latest-versions' version '0.2.19'
  	id 'com.github.ben-manes.versions' version '0.53.0'
}

group = 'com.ldiamond'
version = '8.0.2-SNAPSHOT'
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/milestone' }
	maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	rewrite("org.openrewrite.recipe:rewrite-migrate-java:latest.release")
	rewrite("org.openrewrite.recipe:rewrite-rewrite:latest.release")
	rewrite("org.openrewrite.recipe:rewrite-spring:latest.release")
	rewrite("org.openrewrite.recipe:rewrite-static-analysis:latest.release")
	rewrite("org.openrewrite.recipe:rewrite-testing-frameworks:latest.release")

	runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"

	implementation ('org.springframework.boot:spring-boot-starter') {
		exclude group: 'commons-logging', module: 'commons-logging'
	}
 	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation ('com.fasterxml.jackson.core:jackson-databind') {
		exclude group: 'commons-logging', module: 'commons-logging'
	}
	implementation ('org.springframework:spring-web') {
		exclude group: 'commons-logging', module: 'commons-logging'
	}
	implementation 'commons-codec:commons-codec'

	implementation ('org.knowm.xchart:xchart:3.8.+') {
		exclude group: 'commons-logging', module: 'commons-logging'
	}
	implementation ('org.apache.commons:commons-lang3:3.19.+') {
		exclude group: 'commons-logging', module: 'commons-logging'
	}
    implementation 'com.github.librepdf:openpdf:3.0.0'
	implementation("com.google.guava:guava:33.5.0-jre")

	testImplementation 'org.mockito:mockito-junit-jupiter:latest.release'
	testImplementation 'com.ldiamond:architectureunittests:latest.release'
	testImplementation 'com.tngtech.archunit:archunit-junit5:latest.release'
}

tasks.named('test') {
	useJUnitPlatform()
}

sonar {
  properties {
    property "sonar.projectKey", "larrydiamond_sqgraph"
    property "sonar.organization", "larrydiamond-github"
  }
}

sonarqube {
    properties {
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.projectKey", "larrydiamond_sqgraph"
		property "sonar.organization", "larrydiamond-github"
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.scm.disabled", "true"
		property "sonar.sources", "src/main/java/com/ldiamond/sqgraph"
		property "sonar.coverage.exclusions", 
			"src/main/java/com/ldiamond/sqgraph/Config.java,src/main/java/com/ldiamond/sqgraph/SearchHistory.java,src/main/java/com/ldiamond/sqgraph/ValidationResult.java,src/main/java/com/ldiamond/sqgraph/MetricsResults.java"
		property "sonar.coverage.jacoco.xmlReportPaths","build/reports/jacoco/test/jacocoTestReport.xml"
    }
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = true
        csv.required = true
    }
}

dependencyCheck {
    nvd {
        apiKey = System.getenv('NVD_KEY')
		delay = 16000
    }
}

// gradle rewriteRun
rewrite {
	activeRecipe("org.openrewrite.java.testing.archunit.ArchUnit0to1Migration")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertEqualsBooleanToAssertBoolean")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertEqualsNullToAssertNull")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertFalseEqualsToAssertNotEquals")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertFalseNegationToAssertTrue")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertFalseNullToAssertNotNull")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertLiteralBooleanToFailRecipes")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertNotEqualsBooleanToAssertBoolean")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertTrueComparisonToAssertEquals")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertTrueEqualsToAssertEquals")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertTrueNegationToAssertFalse")
	activeRecipe("org.openrewrite.java.testing.cleanup.AssertTrueNullToAssertNull")
	activeRecipe("org.openrewrite.java.testing.junit5.CleanupAssertions")
	activeRecipe("org.openrewrite.java.testing.junit5.RemoveTryCatchFailBlocks")
	
	activeRecipe("org.openrewrite.staticanalysis.AtomicPrimitiveEqualsUsesGet")
	activeRecipe("org.openrewrite.staticanalysis.BooleanChecksNotInverted")
	activeRecipe("org.openrewrite.staticanalysis.BufferedWriterCreationRecipes")
	activeRecipe("org.openrewrite.staticanalysis.CaseInsensitiveComparisonsDoNotChangeCase")
	activeRecipe("org.openrewrite.staticanalysis.CatchClauseOnlyRethrows")
	activeRecipe("org.openrewrite.staticanalysis.CollectionToArrayShouldHaveProperType")
	activeRecipe("org.openrewrite.staticanalysis.EqualsAvoidsNull")
    activeRecipe("org.openrewrite.staticanalysis.FinalClass")
	activeRecipe("org.openrewrite.staticanalysis.FinalizeLocalVariables")
	activeRecipe("org.openrewrite.staticanalysis.IndexOfReplaceableByContains")
	activeRecipe("org.openrewrite.staticanalysis.InstanceOfPatternMatch")
	activeRecipe("org.openrewrite.staticanalysis.IsEmptyCallOnCollections")
	activeRecipe("org.openrewrite.staticanalysis.MissingOverrideAnnotation")
	activeRecipe("org.openrewrite.staticanalysis.NewStringBuilderBufferWithCharArgument")
	activeRecipe("org.openrewrite.staticanalysis.NoEmptyCollectionWithRawType")
    activeRecipe("org.openrewrite.staticanalysis.NoRedundantJumpStatements")
    activeRecipe("org.openrewrite.staticanalysis.PreferEqualityComparisonOverDifferenceCheck")
	activeRecipe("org.openrewrite.staticanalysis.RemoveRedundantNullCheckBeforeLiteralEquals")
	activeRecipe("org.openrewrite.staticanalysis.RemoveHashCodeCallsFromArrayInstances")
    activeRecipe("org.openrewrite.staticanalysis.RemoveToStringCallsFromArrayInstances")
	activeRecipe("org.openrewrite.staticanalysis.RenameMethodsNamedHashcodeEqualOrToString")
    activeRecipe("org.openrewrite.staticanalysis.ReplaceClassIsInstanceWithInstanceof")
	activeRecipe("org.openrewrite.staticanalysis.ReplaceThreadRunWithThreadStart")
	activeRecipe("org.openrewrite.staticanalysis.ReplaceWeekYearWithYear")
    activeRecipe("org.openrewrite.staticanalysis.SimplifyBooleanExpression")
    activeRecipe("org.openrewrite.staticanalysis.StaticMethodNotFinal")
	activeRecipe("org.openrewrite.staticanalysis.StringLiteralEquality")
	activeRecipe("org.openrewrite.staticanalysis.UnnecessaryPrimitiveAnnotations")
	activeRecipe("org.openrewrite.staticanalysis.WriteOctalValuesAsDecimal")

	activeRecipe("org.openrewrite.java.migrate.CastArraysAsListToList")
	activeRecipe("org.openrewrite.java.migrate.guava.NoGuavaJava11")
	activeRecipe("org.openrewrite.java.migrate.guava.NoGuavaDirectExecutor")
	activeRecipe("org.openrewrite.java.migrate.guava.NoGuavaListsNewArrayList")
	activeRecipe("org.openrewrite.java.migrate.guava.NoGuavaMapsNewHashMap")
	activeRecipe("org.openrewrite.java.migrate.guava.PreferJavaUtilCollectionsSynchronizedNavigableMap")
	activeRecipe("org.openrewrite.java.migrate.guava.PreferJavaUtilOptional")
	activeRecipe("org.openrewrite.java.migrate.jacoco.UpgradeJaCoCo")
	activeRecipe("org.openrewrite.java.migrate.lang.StringRulesRecipes")
	activeRecipe("org.openrewrite.java.migrate.lang.UseStringIsEmptyRecipe")
	activeRecipe("org.openrewrite.java.migrate.lombok.LombokValToFinalVar")
	activeRecipe("org.openrewrite.java.migrate.lombok.UseLombokGetter")
	activeRecipe("org.openrewrite.java.migrate.lombok.UseLombokSetter")
	activeRecipe("org.openrewrite.java.migrate.lombok.UseNoArgsConstructor")
	activeRecipe("org.openrewrite.java.migrate.ThreadStopDestroy")
	activeRecipe("org.openrewrite.java.migrate.util.IteratorNext")
	activeRecipe("org.openrewrite.java.migrate.util.JavaUtilAPIs")
	activeRecipe("org.openrewrite.java.migrate.util.ListFirstAndLast")
	activeRecipe("org.openrewrite.java.migrate.util.OptionalNotEmptyToIsPresent")
	activeRecipe("org.openrewrite.java.migrate.util.OptionalNotPresentToIsEmpty")
	activeRecipe("org.openrewrite.java.migrate.util.OptionalStreamRecipe")
	activeRecipe("org.openrewrite.java.migrate.util.UseEnumSetOf")
	activeRecipe("org.openrewrite.java.migrate.util.UseLocaleOf")
	activeRecipe("org.openrewrite.java.migrate.util.UseMapOf")

    activeRecipe("org.openrewrite.java.recipes.UpgradeTestsToJava21")

	activeRecipe("org.openrewrite.java.spring.NoAutowiredOnConstructor")

	activeRecipe("org.openrewrite.java.spring.boot2.MigrateLoggingSystemPropertyConstants")
	activeRecipe("org.openrewrite.java.spring.boot2.MigrateMultipartConfigFactory")
	activeRecipe("org.openrewrite.java.spring.boot2.MigrateRestTemplateBuilderTimeoutByInt")
	activeRecipe("org.openrewrite.java.spring.boot2.MoveAutoConfigurationToImportsFile")
	activeRecipe("org.openrewrite.java.spring.boot2.ReplaceDeprecatedEnvironmentTestUtils")
	activeRecipe("org.openrewrite.java.spring.boot2.ReplaceExtendWithAndContextConfiguration")
	activeRecipe("org.openrewrite.java.spring.boot2.RestTemplateBuilderRequestFactory")
	activeRecipe("org.openrewrite.java.spring.boot2.SpringBootMavenPluginMigrateAgentToAgents")
	activeRecipe("org.openrewrite.java.spring.boot2.UnnecessarySpringExtension")
	activeRecipe("org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_5")

	activeRecipe("org.openrewrite.java.spring.framework.MigrateWebMvcConfigurerAdapter")

	activeRecipe("org.openrewrite.java.spring.http.ReplaceStringLiteralsWithHttpHeadersConstants")
	activeRecipe("org.openrewrite.java.spring.http.ReplaceStringLiteralsWithMediaTypeConstants")

	activeRecipe("org.openrewrite.java.spring.test.SpringRulesToJUnitExtension")
	    
	activeRecipe("org.openrewrite.java.testing.junit6.JUnit5to6Migration")

	setExportDatatables(true)
}

